--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,6 @@
         Manage Movie <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Rating</a></li>
         <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Movie</a></li>
         <li><a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Movie</a></li>
       </ul>
@@ -40,8 +39,8 @@
     <ul class="list-group">
       <li
         class="list-group-item"
-        *ngFor="let ingredient of recipe.ingredients">
-        {{ ingredient.name }} - {{ ingredient.amount }}
+        *ngFor="let review of recipe.reviews">
+        {{ review.name }} - {{ review.amount }}
       </li>
     </ul>
   </div>
