--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,16 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a routerLink="/" class="navbar-brand">Movie Book</a>
+      <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active"><!---- *ngIf="isAuthenticated">-->
-          <a routerLink="/recipes">Movies</a>
-        </li>
-        <li routerLinkActive="active">
-          <a routerLink="/shopping-list">IMDB Rating</a>
+          <a routerLink="/recipes">Recipes</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="isAuthenticated">
-          <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
-        </li>
         <li class="dropdown" appDropdown><!--- *ngIf="isAuthenticated">-->
           <a style="cursor: pointer;" class="dropdown-toggle" role="button"
             >Manage <span class="caret"></span
